--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,6 +9,7 @@
     padding: 9px;
     font-size: 15px;
     font-weight: 500;
+    
 }
 :hover.btn_style{
     background-color: #F6F6F6;
@@ -32,4 +33,8 @@
 .table{
   border: 1px solid rgb(229 231 235);
   padding: 8px;
+}
+
+.active_btn{
+  color: white;
 }
